--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -10,7 +10,7 @@
     <% end %>
   </div>
   <div class="row no-gutters mt-4">
-    <div class="col-lg-4 ml-3">
+    <div class="col-lg-4 col-sm-6 ml-3">
   <table class="table border">
     <thead class="thead-light">
       <tr>
