--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -6,7 +6,7 @@
       </h4>
     </div>
   </div>
-  <%= form_with model: @customers,url:  customer_registration_path do |f| %>
+  <%= form_with model: @customer,url:  customer_registration_path do |f| %>
     <div class="row form-group justify-content-center">
       <span class="col-2">
         <%= f.label "氏名" ,class: "form-label" %>
