--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,93 +1,92 @@
 <div class="container">
   <div class="row">
-    <div class="my-5">
-      <h4 class="bg-secondary text-white text-center ml-5 px-5 rounded">
+    <div class="col-auto">
+      <h4 class="bg-secondary text-white text-center ml-lg-5 px-5 rounded">
         <%= @customer.full_name %>さんの会員情報編集
         </h4>
     </div>
   </div>
   <%= form_with model: @customer,url: admin_customer_path(@customer.id),method: :patch do |f| %>
     <div class="row justify-content-center mb-3">
-      <p class="col-2">
+      <p class="col-lg-2 col-md-4">
         会員ID
       </p>
-      <h5 class="col-6">
+      <h5 class="col-md-6 col-sm-4">
         <%= @customer.id %>
       </h5>
     </div>
     <div class="row form-group justify-content-center">
-      <span class="col-2">
+      <span class="col-lg-2 col-md-4">
         <%= f.label "氏名" ,class: "form-label" %>
       </span>
-      <span class="col-3">
-        <%= f.text_field :last_name,autofocus: true,placeholder: "姓",class: "form-control" %>
+      <span class="col-md-3 col-sm-2">
+        <%= f.text_field :last_name,autofocus: true,placeholder: "姓",class: "form-label" %>
       </span>
-      <span class="col-3">
+      <span class="col-md-3 col-sm-2">
         <%= f.text_field :first_name,autofocus: true,placeholder: "名",class: "form-control" %>
       </span>
     </div>
     <div class="row form-group justify-content-center">
-      <span class="col-2">
+      <span class="col-lg-2 col-md-4">
         <%= f.label "フリガナ" ,class: "form-label" %>
       </span>
-      <span class="col-3">
+      <span class="col-md-3 col-sm-2">
         <%= f.text_field :last_name_kana,autofocus: true,placeholder: "姓カナ",class: "form-control" %>
       </span>
-      <span class="col-3">
+      <span class="col-md-3 col-sm-2">
         <%= f.text_field :first_name_kana,autofocus: true,placeholder: "名カナ",class: "form-control" %>
       </span>
     </div>
     <div class="row form-group justify-content-center">
-      <span class="col-2">
+      <span class="col-lg-2 col-md-4">
         <%= f.label "郵便番号" ,class: "form-label" %>
       </span>
-      <span class="col-3">
+      <span class="col-md-3 col-sm-2">
         <%= f.text_field :postal_code,autofocus: true,placeholder: "郵便番号",class: "form-control" %>
       </span>
-      <span class="col-3"></span>
+      <span class="col-md-3 col-sm-2"></span>
     </div>
     <div class="row form-group justify-content-center">
-      <span class="col-2">
+      <span class="col-lg-2 col-md-4">
         <%= f.label "住所" ,class: "form-label" %>
       </span>
-      <span class="col-6">
+      <span class="col-md-6 col-sm-4">
         <%= f.text_field :address,autofocus: true,placeholder: "住所",class: "form-control" %>
       </span>
     </div>
     <div class="row form-group justify-content-center">
-      <span class="col-2">
+      <span class="col-lg-2 col-md-4">
         <%= f.label "電話番号" ,class: "form-label" %>
       </span>
-      <span class="col-3">
+      <span class="col-md-3 col-sm-2">
         <%= f.telephone_field :telephone_number,autofocus: true,placeholder: "電話番号",class: "form-control" %>
       </span>
-      <span class="col-3"></span>
+      <span class="col-md-3 col-sm-2"></span>
     </div>
     <div class="row form-group justify-content-center">
-      <span class="col-2">
+      <span class="col-lg-2 col-md-4">
         <%= f.label "メールアドレス" ,class: "form-label" %>
       </span>
-      <span class="col-3">
+      <span class="col-md-3 col-sm-2">
         <%= f.email_field :email,autofocus: true,placeholder: "メールアドレス",class: "form-control" %>
       </span>
-      <span class="col-3"></span>
+      <span class="col-md-3 col-sm-2"></span>
     </div>
     <div class="row form-group justify-content-center">
-      <span class="col-2">
+      <span class="col-lg-2 col-md-4">
         <%= f.label "会員ステータス" ,class: "form-label" %>
       </span>
-      <span class="col-3">
+      <span class="col-md-3 col-sm-2">
         <%= f.radio_button :is_deleted, false, autofocus: true,class: "form-check form-check-inline" %>有効
       </span>
-      <span class="col-3">
+      <span class="col-md-3 col-sm-2">
         <%= f.radio_button :is_deleted, true, autofocus: true,class: "form-check form-check-inline" %>退会
       </span>
     </div>
     <div class="row form_group justify-content-center">
-      <span class="col-3 offset-2">
-        <%= f.submit "変更を保存",class: "btn btn-success btn-block" %>
+      <span class="col-md-3 col-sm-4">
+        <%= f.submit "変更を保存",class: "btn btn-success px-5" %>
       </span>
-      <span class="col-3"></span>
     </div>
   <% end %>
 </div>
