--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,64 +1,64 @@
 <div class="container">
-  <div class="row">
-    <div class="my-5">
-      <h4 class="bg-secondary text-white text-center ml-5 px-5 rounded">
+  <div class="row my-5">
+    <div class="col-auto">
+      <h4 class="bg-secondary text-white text-center ml-lg-5 px-5 rounded">
         <%= @customer.full_name %>さんの会員詳細
       </h4>
     </div>
   </div>
     <div class="row justify-content-center mb-3">
-      <p class="col-lg-2">
+      <p class="col-lg-2 col-md-4">
         会員ID
       </p>
-      <h5 class="col-6">
+      <h5 class="col-lg-6 col-md-4">
         <%= @customer.id %>
       </h5>
     </div>
     <div class="row justify-content-center mb-3">
-      <p class="col-2">
+      <p class="col-lg-2 col-md-4">
         氏名
       </p>
-      <h5 class="col-6">
+      <h5 class="col-lg-6 col-md-4">
         <%= @customer.name %>
       </h5>
     </div>
     <div class="row justify-content-center mb-3">
-      <p class="col-2">
+      <p class="col-lg-2 col-md-4">
         フリガナ
       </p>
-      <h5 class="col-6">
+      <h5 class="col-lg-6 col-md-4">
         <%= @customer.name_kana %>
       </h5>
     </div>
     <div class="row justify-content-center mb-3">
-      <p class="col-2">
+      <p class="col-lg-2 col-md-4">
         郵便番号
       </p>
-      <h5 class="col-6">
+      <h5 class="col-lg-6 col-md-4">
         <%= @customer.postal_code %>
       </h5>
     </div>
     <div class="row justify-content-center mb-3">
-      <p class="col-2">
+      <p class="col-lg-2 col-md-4">
         住所
       </p>
-      <h5 class="col-6">
+      <h5 class="col-lg-6 col-md-4">
         <%= @customer.address %>
       </h5>
     </div>
     <div class="row justify-content-center mb-3">
-      <p class="col-2">
+      <p class="col-lg-2 col-md-4">
         電話番号
       </p>
-      <h5 class="col-6">
+      <h5 class="col-lg-6 col-md-4">
         <%= @customer.telephone_number %>
       </h5>
     </div>
     <div class="row justify-content-center mb-3">
-      <p class="col-2">
+      <p class="col-lg-2 col-md-4">
         メールアドレス
       </p>
-      <h5 class="col-6">
+      <h5 class="col-lg-6 col-md-4">
         <%= @customer.email %>
       </h5>
     </div>
@@ -66,7 +66,7 @@
       <p class="col-lg-2 col-md-4">
         会員ステータス
       </p>
-      <h5 class="col-6">
+      <h5 class="col-lg-6 col-md-4">
         <% if @customer.is_deleted == true %>
           <p class="text-secondary">退会</p>
         <% else %>
@@ -75,7 +75,8 @@
       </h5>
     </div>
   <div class="row justify-content-center">
-    <%= link_to "編集する",edit_admin_customer_path(@customer.id),class: "btn btn-success px-5 mx-5" %>
-    <%= link_to "注文一覧を見る",admin_root_path,class: "btn btn-primary px-5 mx-5" %>
+    <%= link_to "編集する",edit_admin_customer_path(@customer.id),class: "btn btn-success px-5 mx-5 mb-sm-3" %>
+    <%= link_to "注文一覧を見る",admin_root_path,class: "btn btn-primary px-5 mx-5 mb-sm-3" %>
   </div>
 </div>
+
