--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,12 +1,22 @@
 <div class="container">
-  <div class="row my-3">
-    <h4 class="bg-secondary text-white my-3 mx-auto mx-md-5 px-4 rounded">ジャンル編集</h4>
+  <div class="row my-5">
+    <div class="col-auto">
+      <h4 class="bg-secondary text-white text-center ml-lg-5 px-5 rounded">
+      ジャンル編集
+      </h4>
+    </div>
   </div>
-  <div class="row">
-    <%= form_with model: @genre,url: admin_genre_path,method: :patch do |f| %>
-      <%= f.label :"ジャンル名",class: "mr-3" %>
-      <%= f.text_field :name,autofocus: true,placeholder:"ジャンル名",class: "mr-3" %>
-      <%= f.submit "変更を保存",class: "btn btn-success" %>
-    <% end %>
-  </div>
+  <%= form_with model: @genre,url: admin_genre_path,method: :patch do |f| %>
+    <div class="row align-items-center form-group">
+      <span class="col-md-auto col-sm-12 my-1">
+        <%= f.label :"ジャンル名",class: "form-label" %>
+      </span>
+      <span class="col-md-auto col-sm-12 my-1">
+        <%= f.text_field :name,autofocus: true,placeholder:"ジャンル名",class: "form-label" %>
+      </span>
+      <span class="col-md-auto col-sm-12 my-1">
+        <%= f.submit "新規登録",class: "btn btn-success px-5" %>
+      </span>
+    </div>
+  <% end %>
 </div>
