--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,7 +1,9 @@
 <div class="container">
-  <div class="row">
-    <div class="col-4 m-4">
-      <h4 class="bg-secondary text-white text-center m-3 px-3 rounded">注文履歴一覧</h4>
+  <div class="row my-5">
+    <div class="col-auto">
+      <h4 class="bg-secondary text-white text-center ml-lg-5 px-5 rounded">
+        注文履歴一覧
+      </h4>
     </div>
   </div>
   <div class="row">
@@ -23,14 +25,16 @@
                   <%= order.created_at.strftime('%Y/%m/%d %H:%M:%S') %>
                 <% end %>
               </td>
-              <td><%= order.customer.last_name %><%= order.customer.first_name %></td>
+              <td><%= order.customer.full_name %></td>
               <td><%= order.order_details.amount.sum %></td>
               <td><%= order.status %></td>
             </tr>
           <% end %>
         </tbody>
       </table>
-      <%= paginate @orders %>
     </div>
+  </div>
+  <div class="row justify-content-center">
+    <%= paginate @orders %>
   </div>
 </div>
