--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,13 +1,13 @@
 <div class="container">
-  <div class="row">
-    <div class="col-4 my-3">
-      <h4 class="bg-secondary text-white text-center m-3 px-3 rounded">
+  <div class="row my-5">
+    <div class="col-auto align-self-center">
+      <h4 class="bg-secondary text-white text-center ml-lg-5 px-5 rounded">
         商品一覧
       </h4>
     </div>
-    <div class="col-2 ml-auto my-4">
+    <div class="col-auto ml-auto mr-4">
       <%= link_to new_admin_item_path do %>
-        <i class="fas fa-plus-circle fa-3x"></i>
+        <i class="fas fa-plus-circle fa-4x"></i>
       <% end %>
     </div>
   </div>
@@ -29,16 +29,18 @@
               <th><%= item.id %></th>
               <th>
                 <%= link_to admin_item_path(item.id) do %>
-                  <%= item.name %>
+                  <%= item.name.truncate(10) %>
                 <% end %>
               </th>
               <th><%= item.price %></th>
               <th><%= item.genre.name %></th>
-              <th><% if item.is_active == true%>
-                  <p class="text-secondary">販売中</p>
+              <th>
+                <% if item.is_active == true%>
+                  <p class="text-success">販売中</p>
                 <% else %>
-                  <p class="text-success">販売停止中</p>
-                <% end %></th>
+                  <p class="text-secondary">販売停止中</p>
+                <% end %>
+              </th>
             </tr>
           <% end %>
         </tbody>
