--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,16 +1,16 @@
 <div class="container">
-  <div class="row">
-    <div class="col-4 my-3">
-      <h4 class="bg-secondary text-white text-center m-3 px-3 rounded">
-        <%= @order.customers.last_name %><%= @order.customers.first_name %>さんの会員詳細
-        </h4>
+  <div class="row my-5">
+    <div class="col-auto">
+      <h4 class="bg-secondary text-white text-center ml-lg-5 px-5 rounded">
+        <%= @order.customers.full_name %>さんの会員詳細
+      </h4>
     </div>
   </div>
   <div class="row mt-2">
     <ul class="list-group list-group-horizontal border-0">
       <li class="list-group-item font-weight-bold">購入者</li>
       <li class="list-group-item">
-        <%= @order.customers.last_name %> <%= @order.customers.first_name %>
+        <%= @order.customers.name %>
       </li>
     </ul>
     <ul class="list-group list-group-horizontal border-0">
@@ -22,7 +22,7 @@
     <ul class="list-group list-group-horizontal border-0">
       <li class="list-group-item font-weight-bold">配送先</li>
       <li class="list-group-item">
-        〒<%= @order.postal_code %> <%= @order.address %><br>
+        <%= @order.address_display %><br>
         <%= @order.name %>
       </li>
     </ul>
@@ -59,9 +59,7 @@
           <% @order_details.each do |order_detail| %>
             <tr>
               <th><%= order_detail.item.name %></th>
-              <th>
-                <%= order_detail.price %>
-              </th>
+              <th><%= order_detail.price %></th>
               <th><%= order_detail.amount %></th>
               <th><%= order_detail.sub_total %></th>
               <%= form_with model: order_detail,url: admin_update_making_process_path(order_detail.id),method: :patch do |f| %>
