--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row my-5">
-    <div class="col-auto">
+    <div class="col-auto align-self-center">
       <h4 class="bg-secondary text-white text-center ml-lg-5 px-5 rounded">
         <%= @customer.full_name %>さんの会員詳細
       </h4>
