--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row my-5">
-    <div class="col-auto">
+    <div class="col-auto align-self-center">
       <h4 class="bg-secondary text-white text-center ml-lg-5 px-5 rounded">
       ジャンル一覧
       </h4>
