--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -8,7 +8,7 @@
   </div>
   <%= form_with model: @customer,url: admin_customer_path(@customer.id),method: :patch do |f| %>
     <div class="row justify-content-center mb-3">
-      <p class="col-lg-2 col-md-4">
+      <p class="col-lg-3 col-md-4">
         会員ID
       </p>
       <h5 class="col-md-6 col-sm-4">
@@ -16,18 +16,18 @@
       </h5>
     </div>
     <div class="row form-group justify-content-center">
-      <span class="col-lg-2 col-md-4">
+      <span class="col-lg-3 col-md-4">
         <%= f.label "氏名" ,class: "form-label" %>
       </span>
       <span class="col-md-3 col-sm-2">
-        <%= f.text_field :last_name,autofocus: true,placeholder: "姓",class: "form-label" %>
+        <%= f.text_field :last_name,autofocus: true,placeholder: "姓",class: "form-control" %>
       </span>
       <span class="col-md-3 col-sm-2">
         <%= f.text_field :first_name,autofocus: true,placeholder: "名",class: "form-control" %>
       </span>
     </div>
     <div class="row form-group justify-content-center">
-      <span class="col-lg-2 col-md-4">
+      <span class="col-lg-3 col-md-4">
         <%= f.label "フリガナ" ,class: "form-label" %>
       </span>
       <span class="col-md-3 col-sm-2">
@@ -38,8 +38,8 @@
       </span>
     </div>
     <div class="row form-group justify-content-center">
-      <span class="col-lg-2 col-md-4">
-        <%= f.label "郵便番号" ,class: "form-label" %>
+      <span class="col-lg-3 col-md-4">
+        <%= f.label "郵便番号（ハイフンなし）" ,class: "form-label" %>
       </span>
       <span class="col-md-3 col-sm-2">
         <%= f.text_field :postal_code,autofocus: true,placeholder: "郵便番号",class: "form-control" %>
@@ -47,7 +47,7 @@
       <span class="col-md-3 col-sm-2"></span>
     </div>
     <div class="row form-group justify-content-center">
-      <span class="col-lg-2 col-md-4">
+      <span class="col-lg-3 col-md-4">
         <%= f.label "住所" ,class: "form-label" %>
       </span>
       <span class="col-md-6 col-sm-4">
@@ -55,8 +55,8 @@
       </span>
     </div>
     <div class="row form-group justify-content-center">
-      <span class="col-lg-2 col-md-4">
-        <%= f.label "電話番号" ,class: "form-label" %>
+      <span class="col-lg-3 col-md-4">
+        <%= f.label "電話番号（ハイフンなし）" ,class: "form-label" %>
       </span>
       <span class="col-md-3 col-sm-2">
         <%= f.telephone_field :telephone_number,autofocus: true,placeholder: "電話番号",class: "form-control" %>
@@ -64,7 +64,7 @@
       <span class="col-md-3 col-sm-2"></span>
     </div>
     <div class="row form-group justify-content-center">
-      <span class="col-lg-2 col-md-4">
+      <span class="col-lg-3 col-md-4">
         <%= f.label "メールアドレス" ,class: "form-label" %>
       </span>
       <span class="col-md-3 col-sm-2">
@@ -73,7 +73,7 @@
       <span class="col-md-3 col-sm-2"></span>
     </div>
     <div class="row form-group justify-content-center">
-      <span class="col-lg-2 col-md-4">
+      <span class="col-lg-3 col-md-4">
         <%= f.label "会員ステータス" ,class: "form-label" %>
       </span>
       <span class="col-md-3 col-sm-2">
@@ -84,7 +84,7 @@
       </span>
     </div>
     <div class="row form_group justify-content-center">
-      <span class="col-md-3 col-sm-4">
+      <span class="col-md-4 col-sm-4">
         <%= f.submit "変更を保存",class: "btn btn-success px-5" %>
       </span>
     </div>
