--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -8,13 +8,13 @@
   </div>
   <%= form_with model: @genre,url: admin_genres_path,method: :post do |f| %>
     <div class="row align-items-center form-group">
-      <span class="col-md-auto col-sm-12 my-1">
+      <span class="col-sm-auto my-1">
         <%= f.label :"ジャンル名",class: "form-label" %>
       </span>
-      <span class="col-md-auto col-sm-12 my-1">
+      <span class="col-sm-auto my-1">
         <%= f.text_field :name,autofocus: true,placeholder:"ジャンル名",class: "form-label" %>
       </span>
-      <span class="col-md-auto col-sm-12 my-1">
+      <span class="col-sm-auto my-1">
         <%= f.submit "新規登録",class: "btn btn-success px-5" %>
       </span>
     </div>
