--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,12 +1,17 @@
 <div class="container">
-  <div class="row">
-    <div class="col-4 my-3">
-      <h4 class="bg-secondary text-white text-center m-3 px-3 rounded">マイページ</h4>
+  <div class="row my-5">
+    <div class="col-auto align-self-center">
+      <h4 class="bg-secondary text-white text-center ml-lg-5 px-5 rounded">
+        マイページ
+      </h4>
     </div>
   </div>
   <div class="row">
-    <h4>登録情報</h4>
-    <span><%= link_to "編集する",edit_customers_path,class: "btn btn-success px-3" %></span><br>
+    <h4 class="col-sm-auto my-1">登録情報</h4>
+    <span class="col-sm-auto my-1">
+      <%= link_to "編集する",edit_customers_path,class: "btn btn-success px-3" %>
+    </span>
+    </div>
     <table class="table">
       <tbody>
         <th>
@@ -35,9 +40,12 @@
         </th>
       </tbody>
     </table>
-    <h4>配送先</h4>
-    <span><%= link_to "一覧を見る",addresses_path,class: "btn btn-primary px-3" %></span><br>
-    <h4>注文履歴一覧</h4>
-    <span><%= link_to "一覧を見る",orders_path,class: "btn btn-primary px-3" %></span><br>
+  <div class="row">
+    <h4 class="col-sm-auto my-1">配送先</h4>
+    <span class="col-sm-auto my-1"><%= link_to "一覧を見る",addresses_path,class: "btn btn-primary px-3" %></span>
+  </div>
+  <div class="row">
+    <h4 class="col-sm-auto my-1">注文履歴一覧</h4>
+    <span class="col-sm-auto my-1"><%= link_to "一覧を見る",orders_path,class: "btn btn-primary px-3" %></span>
   </div>
 </div>
