--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,92 +1,92 @@
 <div class="container">
-  <div class="row">
-    <div class="col-4 my-3">
-      <h4 class="bg-secondary text-white text-center m-3 px-3 rounded">
+  <div class="row my-5">
+    <div class="col-auto align-self-center">
+      <h4 class="bg-secondary text-white text-center ml-lg-5 px-5 rounded">
         新規会員登録
       </h4>
     </div>
   </div>
   <%= form_with model: @customer,url:  customer_registration_path do |f| %>
     <div class="row form-group justify-content-center">
-      <span class="col-2">
+      <span class="col-lg-3 col-md-4">
         <%= f.label "氏名" ,class: "form-label" %>
       </span>
-      <span class="col-3">
+      <span class="col-md-3">
         <%= f.text_field :last_name,autofocus: true,placeholder: "姓",class: "form-control" %>
       </span>
-      <span class="col-3">
+      <span class="col-md-3">
         <%= f.text_field :first_name,autofocus: true,placeholder: "名",class: "form-control" %>
       </span>
     </div>
     <div class="row form-group justify-content-center">
-      <span class="col-2">
+      <span class="col-lg-3 col-md-4">
         <%= f.label "フリガナ" ,class: "form-label" %>
       </span>
-      <span class="col-3">
+      <span class="col-md-3">
         <%= f.text_field :last_name_kana,autofocus: true,placeholder: "姓カナ",class: "form-control" %>
       </span>
-      <span class="col-3">
+      <span class="col-md-3">
         <%= f.text_field :first_name_kana,autofocus: true,placeholder: "名カナ",class: "form-control" %>
       </span>
     </div>
     <div class="row form-group justify-content-center">
-      <span class="col-2">
-        <%= f.label "郵便番号" ,class: "form-label" %>
+      <span class="col-lg-3 col-md-4">
+        <%= f.label "郵便番号（ハイフンなし）" ,class: "form-label" %>
       </span>
-      <span class="col-3">
+      <span class="col-md-3">
         <%= f.text_field :postal_code,autofocus: true,placeholder: "郵便番号",class: "form-control" %>
       </span>
-      <span class="col-3"></span>
+      <span class="col-md-3"></span>
     </div>
     <div class="row form-group justify-content-center">
-      <span class="col-2">
+      <span class="col-lg-3 col-md-4">
         <%= f.label "住所" ,class: "form-label" %>
       </span>
-      <span class="col-6">
+      <span class="col-md-6">
         <%= f.text_field :address,autofocus: true,placeholder: "住所",class: "form-control" %>
       </span>
     </div>
     <div class="row form-group justify-content-center">
-      <span class="col-2">
-        <%= f.label "電話番号" ,class: "form-label" %>
+      <span class="col-lg-3 col-md-4">
+        <%= f.label "電話番号（ハイフンなし）" ,class: "form-label" %>
       </span>
-      <span class="col-3">
+      <span class="col-md-3">
         <%= f.telephone_field :telephone_number,autofocus: true,placeholder: "電話番号",class: "form-control" %>
       </span>
-      <span class="col-3"></span>
+      <span class="col-md-3"></span>
     </div>
     <div class="row form-group justify-content-center">
-      <span class="col-2">
+      <span class="col-lg-3 col-md-4">
         <%= f.label "メールアドレス" ,class: "form-label" %>
       </span>
-      <span class="col-3">
+      <span class="col-md-3">
         <%= f.email_field :email,autofocus: true,placeholder: "メールアドレス",class: "form-control" %>
       </span>
-      <span class="col-3"></span>
+      <span class="col-md-3"></span>
     </div>
     <div class="row form-group justify-content-center">
-    <span class="col-2">
-      <%= f.label "パスワード" ,class: "form-label" %>
+    <span class="col-lg-3 col-md-4">
+      <%= f.label "パスワード（６文字以上）" ,class: "form-label" %>
       </span>
-      <span class="col-3">
+      <span class="col-md-3">
         <%= f.password_field :password, autocomplete: "new-password",class: "form-control" %>
       </span>
-      <span class="col-3"></span>
+      <span class="col-md-3"></span>
     </div>
     <div class="row form-group justify-content-center">
-      <span class="col-2">
-        <%= f.label "パスワード" ,class: "form-label" %>
+      <span class="col-lg-3 col-md-4">
+        <%= f.label "パスワード（確認用）" ,class: "form-label" %>
       </span>
-      <span class="col-3">
+      <span class="col-md-3">
         <%= f.password_field :password_confirmation, autocomplete: "new-password",class: "form-control" %>
       </span>
-      <span class="col-3"></span>
+      <span class="col-md-3"></span>
     </div>
     <div class="row form_group justify-content-center">
-      <span class="col-3 offset-2">
+      <span class="col-md-3 offset-lg-3 offset-md-4">
         <%= f.submit "新規登録",class: "btn btn-success btn-block" %>
       </span>
-      <span class="col-3"></span>
+      <span class="col-md-3"></span>
     </div>
   <% end %>
   <%= render "public/shared/links" %>
