[update] レイアウト編集

--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row my-5">
     <div class="col-auto align-self-center">
-      <h4 class="bg-secondary text-white text-center ml-lg-5 px-5 rounded">
+      <h4 class="bg text-center ml-lg-5 px-5 rounded">
         会員一覧
       </h4>
     </div>
