--- a/app/views/public/shared/_links.html.erb
+++ b/app/views/public/shared/_links.html.erb
@@ -1,7 +1,7 @@
 <%- if controller_name != 'sessions' %>
   <div class="row mt-5">
     <div class="col-auto offset-md-1">
-      <span class="bg-secondary text-white text-center ml-lg-5 px-5 rounded">すでに登録済みの方</span>
+      <span class="bg text-center ml-lg-5 px-5 rounded">すでに登録済みの方</span>
     </div>
   </div>
   <div class="row justify-content-center mt-3">
@@ -14,7 +14,7 @@
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
   <div class="row mt-5">
     <div class="col-auto offset-md-1">
-      <span class="bg-secondary text-white text-center ml-lg-5 px-5 rounded">会員登録がお済みでない方</span>
+      <span class="bg text-center ml-lg-5 px-5 rounded">会員登録がお済みでない方</span>
     </div>
   </div>
   <div class="row justify-content-center mt-3">
