--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -14,30 +14,30 @@
     </div>
     <table class="table">
       <tbody>
-        <th>
-          <td class="bg-secondary">氏名</td>
+        <tr>
+          <th class="bg" >氏名</th>
           <td><%= @customer.last_name %> <%= @customer.first_name %></td>
         </th>
-        <th>
-          <td class="bg-secondary">カナ</td>
+        <tr>
+          <th class="bg-secondary">カナ</th>
           <td><%= @customer.last_name_kana %> <%= @customer.first_name_kana %></td>
-        </th>
-        <th>
-          <td class="bg-secondary">郵便番号</td>
+        </tr>
+        <tr>
+          <th class="bg-secondary">郵便番号</th>
           <td><%= @customer.postal_code %></td>
-        </th>
-        <th>
-          <td class="bg-secondary">住所</td>
+        </tr>
+        <tr>
+          <th class="bg-secondary">住所</th>
           <td><%= @customer.address %></td>
-        </th>
-        <th>
-          <td class="bg-secondary">電話番号</td>
+        </tr>
+        <tr>
+          <th class="bg-secondary">電話番号</th>
           <td><%= @customer.telephone_number %></td>
         </th>
-        <th>
-          <td class="bg-secondary">メールアドレス</td>
+        <tr>
+          <th class="bg-secondary">メールアドレス</th>
           <td><%= @customer.email %></td>
-        </th>
+        </tr>
       </tbody>
     </table>
   <div class="row">
