[update] レイアウト修正

--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -33,7 +33,7 @@
         <td class="align-middle">
           <%= genre.name %>
         </td>
-        <td class="text-right pr-4">
+        <td class="pr-4">
           <%= link_to "編集する", edit_admin_genre_path(genre.id),class: "btn btn-success" %>
         </td>
       </tr>
