--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -11,7 +11,7 @@
       <p class="col-lg-3 col-md-4">
         会員ID
       </p>
-      <h5 class="col-md-6 col-sm-4">
+      <h5 class="col-md-6">
         <%= @customer.id %>
       </h5>
     </div>
@@ -19,10 +19,10 @@
       <span class="col-lg-3 col-md-4">
         <%= f.label "氏名" ,class: "form-label" %>
       </span>
-      <span class="col-md-3 col-sm-2">
+      <span class="col-md-3 col-sm-6">
         <%= f.text_field :last_name,autofocus: true,placeholder: "姓",class: "form-control" %>
       </span>
-      <span class="col-md-3 col-sm-2">
+      <span class="col-md-3 col-sm-6">
         <%= f.text_field :first_name,autofocus: true,placeholder: "名",class: "form-control" %>
       </span>
     </div>
@@ -30,10 +30,10 @@
       <span class="col-lg-3 col-md-4">
         <%= f.label "フリガナ" ,class: "form-label" %>
       </span>
-      <span class="col-md-3 col-sm-2">
+      <span class="col-md-3 col-sm-6">
         <%= f.text_field :last_name_kana,autofocus: true,placeholder: "姓カナ",class: "form-control" %>
       </span>
-      <span class="col-md-3 col-sm-2">
+      <span class="col-md-3 col-sm-6">
         <%= f.text_field :first_name_kana,autofocus: true,placeholder: "名カナ",class: "form-control" %>
       </span>
     </div>
@@ -41,16 +41,16 @@
       <span class="col-lg-3 col-md-4">
         <%= f.label "郵便番号（ハイフンなし）" ,class: "form-label" %>
       </span>
-      <span class="col-md-3 col-sm-2">
+      <span class="col-md-3 col-sm-6">
         <%= f.text_field :postal_code,autofocus: true,placeholder: "郵便番号",class: "form-control" %>
       </span>
-      <span class="col-md-3 col-sm-2"></span>
+      <span class="col-md-3 col-sm-6"></span>
     </div>
     <div class="row form-group justify-content-center">
       <span class="col-lg-3 col-md-4">
         <%= f.label "住所" ,class: "form-label" %>
       </span>
-      <span class="col-md-6 col-sm-4">
+      <span class="col-md-6">
         <%= f.text_field :address,autofocus: true,placeholder: "住所",class: "form-control" %>
       </span>
     </div>
@@ -58,33 +58,33 @@
       <span class="col-lg-3 col-md-4">
         <%= f.label "電話番号（ハイフンなし）" ,class: "form-label" %>
       </span>
-      <span class="col-md-3 col-sm-2">
+      <span class="col-md-3 col-sm-6">
         <%= f.telephone_field :telephone_number,autofocus: true,placeholder: "電話番号",class: "form-control" %>
       </span>
-      <span class="col-md-3 col-sm-2"></span>
+      <span class="col-md-3 col-sm-6"></span>
     </div>
     <div class="row form-group justify-content-center">
       <span class="col-lg-3 col-md-4">
         <%= f.label "メールアドレス" ,class: "form-label" %>
       </span>
-      <span class="col-md-3 col-sm-2">
+      <span class="col-md-3 col-sm-6">
         <%= f.email_field :email,autofocus: true,placeholder: "メールアドレス",class: "form-control" %>
       </span>
-      <span class="col-md-3 col-sm-2"></span>
+      <span class="col-md-3 col-sm-6"></span>
     </div>
     <div class="row form-group justify-content-center">
       <span class="col-lg-3 col-md-4">
         <%= f.label "会員ステータス" ,class: "form-label" %>
       </span>
-      <span class="col-md-3 col-sm-2">
+      <span class="col-md-3 col-sm-6">
         <%= f.radio_button :is_deleted, false, autofocus: true,class: "form-check form-check-inline" %>有効
       </span>
-      <span class="col-md-3 col-sm-2">
+      <span class="col-md-3 col-sm-6">
         <%= f.radio_button :is_deleted, true, autofocus: true,class: "form-check form-check-inline" %>退会
       </span>
     </div>
     <div class="row form_group justify-content-center">
-      <span class="col-md-4 col-sm-4">
+      <span class="col-md-4 col-sm-12">
         <%= f.submit "変更を保存",class: "btn btn-success px-5" %>
       </span>
     </div>
