--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,10 @@
     <header class="bg-info">
       <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-          <%= link_to 'ながのCAKE',root_path,class: 'h3 p-2 m-3 text-white' %>
-          <% if customer_signed_in? %>
-            <p>ようこそ、<%= current_customer.last_name %>さん</p>
+          <% if admin_signed_in? %>
+            <%= link_to "ながのCAKE", admin_root_path, class: "h3 p-2 m-3 text-white"%>
+          <% else %>
+            <%= link_to "ながのCAKE", root_path, class: "h3 p-2 m-3 text-white"%>
           <% end %>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavdropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -24,6 +25,11 @@
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
               <% if customer_signed_in? %>
+                <li class="nav-item">
+                  <% if customer_signed_in? %>
+                    <span>ようこそ、<%= current_customer.last_name %>さん!!</span>
+                  <% end %>
+                </li>
                 <li class="nav-item">
                   <%= link_to(mypage_path,class: "nav-link text-white") do %>
                    <i class="fas fa-home"></i>
