--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,77 +1,72 @@
 <div class="container">
-  <div class="row">
-    <div class="col-4 my-3">
-      <h4 class="bg-secondary text-white text-center m-3 px-3 rounded">
+  <div class="row my-5">
+    <div class="col-auto align-self-center">
+      <h4 class="bg text-center ml-lg-5 px-5 rounded">
         会員情報編集
       </h4>
     </div>
   </div>
   <%= form_with model: @customer,url: update_information_path,method: :patch do |f| %>
-    <div class="card border-0">
-      <div class="card-body">
-        <div class="row form-group">
-          <span class="card-text col-2">
-            <%= f.label "氏名" ,class: "col-2 col-form-label" %>
-          </span>
-          <span class="card-text col-5">
-            <%= f.text_field :last_name,autofocus: true,placeholder: "姓",class: "form-control" %>
-          </span>
-          <span class="card-text col-5">
-            <%= f.text_field :first_name,autofocus: true,placeholder: "名",class: "form-control" %>
-          </span>
-        </div>
-        <div class="row form-group">
-          <span class="card-text col-2">
-            <%= f.label "フリガナ" ,class: "col-3 col-form-label" %>
-          </span>
-          <span class="card-text col-5">
-            <%= f.text_field :last_name_kana,autofocus: true,placeholder: "姓カナ",class: "form-control" %>
-          </span>
-          <span class="card-text col-5">
-            <%= f.text_field :first_name_kana,autofocus: true,placeholder: "名カナ",class: "form-control" %>
-          </span>
-        </div>
-        <div class="row form-group">
-          <span class="card-text col-2">
-            <%= f.label "郵便番号" ,class: "col-3 col-form-label" %>
-          </span>
-          <span class="card-text col-5">
-            <%= f.text_field :postal_code,autofocus: true,placeholder: "郵便番号",class: "form-control" %>
-          </span>
-        </div>
-        <div class="row form-group">
-          <span class="card-text col-2">
-            <%= f.label "住所" ,class: "col-3 col-form-label" %>
-          </span>
-          <span class="card-text col-10">
-            <%= f.text_field :address,autofocus: true,placeholder: "住所",class: "form-control" %>
-          </span>
-        </div>
-        <div class="row form-group">
-          <span class="card-text col-2">
-            <%= f.label "電話番号" ,class: "col-3 col-form-label" %>
-          </span>
-          <span class="card-text col-5">
-            <%= f.telephone_field :telephone_number,autofocus: true,placeholder: "電話番号",class: "form-control" %>
-          </span>
-        </div>
-        <div class="row form-group">
-          <span class="card-text col-2">
-            <%= f.label "メールアドレス" ,class: "col-3 col-form-label" %>
-          </span>
-          <span class="card-text col-5">
-            <%= f.email_field :email,autofocus: true,placeholder: "メールアドレス",class: "form-control" %>
-          </span>
-        </div>
-      </div>
+    <div class="row form-group justify-content-center">
+      <span class="col-lg-3 col-md-4">
+        <%= f.label "氏名" ,class: "form-label" %>
+      </span>
+      <span class="col-md-3 col-sm-6">
+        <%= f.text_field :last_name,autofocus: true,placeholder: "姓",class: "form-control" %>
+      </span>
+      <span class="col-md-3 col-sm-6">
+        <%= f.text_field :first_name,autofocus: true,placeholder: "名",class: "form-control" %>
+      </span>
     </div>
-    <div class="row justify-content-center form-group">
-      <div class="col-3">
-        <%= f.submit "変更を保存",class: "btn btn-success mx-3" %>
-      </div>
-      <div class="col-3 offset-2">
-        <%= link_to "削除する",information_path,class: "btn btn-danger" %>
-      </div>
+    <div class="row form-group justify-content-center">
+      <span class="col-lg-3 col-md-4">
+        <%= f.label "フリガナ" ,class: "form-label" %>
+      </span>
+      <span class="col-md-3 col-sm-6">
+        <%= f.text_field :last_name_kana,autofocus: true,placeholder: "姓カナ",class: "form-control" %>
+      </span>
+      <span class="col-md-3 col-sm-6">
+        <%= f.text_field :first_name_kana,autofocus: true,placeholder: "名カナ",class: "form-control" %>
+      </span>
+    </div>
+    <div class="row form-group justify-content-center">
+      <span class="col-lg-3 col-md-4">
+        <%= f.label "郵便番号（ハイフンなし）" ,class: "form-label" %>
+      </span>
+      <span class="col-md-3 col-sm-6">
+        <%= f.text_field :postal_code,autofocus: true,placeholder: "郵便番号",class: "form-control" %>
+      </span>
+      <span class="col-md-3 col-sm-6"></span>
+    </div>
+    <div class="row form-group justify-content-center">
+      <span class="col-lg-3 col-md-4">
+        <%= f.label "住所" ,class: "form-label" %>
+      </span>
+      <span class="col-md-6">
+        <%= f.text_field :address,autofocus: true,placeholder: "住所",class: "form-control" %>
+      </span>
+    </div>
+    <div class="row form-group justify-content-center">
+      <span class="col-lg-3 col-md-4">
+        <%= f.label "電話番号（ハイフンなし）" ,class: "form-label" %>
+      </span>
+      <span class="col-md-3 col-sm-6">
+        <%= f.telephone_field :telephone_number,autofocus: true,placeholder: "電話番号",class: "form-control" %>
+      </span>
+      <span class="col-md-3 col-sm-6"></span>
+    </div>
+    <div class="row form-group justify-content-center">
+      <span class="col-lg-3 col-md-4">
+        <%= f.label "メールアドレス" ,class: "form-label" %>
+      </span>
+      <span class="col-md-3 col-sm-6">
+        <%= f.email_field :email,autofocus: true,placeholder: "メールアドレス",class: "form-control" %>
+      </span>
+      <span class="col-md-3 col-sm-6"></span>
+    </div>
+    <div class="row form_group justify-content-center">
+        <%= f.submit "変更を保存",class: "btn btn-success px-5 mx-5 mb-sm-3" %>
+        <%= link_to "削除する",confirm_customers_path,class: "btn btn-danger px-5 mx-5 mb-sm-3" %>
     </div>
   <% end %>
 </div>
