--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -9,10 +9,10 @@
   <%= form_with model: @genre,url: admin_genre_path,method: :patch do |f| %>
     <div class="row align-items-center form-group">
       <span class="col-sm-auto my-1">
-        <%= f.label :"ジャンル名",class: "form-label" %>
+        <%= f.label "ジャンル名",class: "form-label" %>
       </span>
       <span class="col-sm-auto my-1">
-        <%= f.text_field :name,autofocus: true,placeholder:"ジャンル名",class: "form-label" %>
+        <%= f.text_field :name,autofocus: true,placeholder: "ジャンル名",class: "form-label" %>
       </span>
       <span class="col-sm-auto my-1">
         <%= f.submit "新規登録",class: "btn btn-success px-5" %>
