--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -26,21 +26,21 @@
         <tbody>
           <% @items.each do |item| %>
             <tr>
-              <th><%= item.id %></th>
-              <th>
+              <td><%= item.id %></td>
+              <td>
                 <%= link_to admin_item_path(item.id) do %>
                   <%= item.name.truncate(10) %>
                 <% end %>
-              </th>
-              <th><%= item.price %></th>
-              <th><%= item.genre.name %></th>
-              <th>
+              </td>
+              <td><%= number_to_currency(item.price)  %></td>
+              <td><%= item.genre.name %></td>
+              <td>
                 <% if item.is_active == true%>
                   <p class="text-success">販売中</p>
                 <% else %>
                   <p class="text-secondary">販売停止中</p>
                 <% end %>
-              </th>
+              </td>
             </tr>
           <% end %>
         </tbody>
