--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -1,32 +1,36 @@
 <div class="container">
-  <div class="row my-3">
-    <h4 class="bg-secondary text-white my-3 mx-auto mx-md-5 px-4 rounded">配送先編集</h4>
+  <div class="row my-5">
+    <div class="col-auto align-self-center">
+      <h4 class="bg text-center ml-lg-5 px-5 rounded">
+        配送先編集
+      </h4>
+    </div>
   </div>
   <%= form_with model: @address,url: addresses_path,method: :patch do |f| %>
   <div class="row form-group">
-    <div class="col-3">
-      <%= f.label :"郵便番号(ハイフンなし)" %>
+    <div class="col-lg-3 col-md-4">
+      <%= f.label "郵便番号(ハイフンなし)" %>
     </div>
-    <div class="col-3">
+    <div class="col-md-3 col-sm-6">
       <%= f.text_field :postal_code,autofocus: true,placeholder:"郵便番号",class: "form-control form-control-sm" %>
     </div>
   </div>
   <div class="row form-group">
-    <div class="col-3">
-      <%= f.label :"住所" %>
+    <div class="col-lg-3 col-md-4">
+      <%= f.label "住所" %>
     </div>
-    <div class="col-6">
+    <div class="col-md-6">
       <%= f.text_field :address,autofocus: true,placeholder:"住所",class: "form-control form-control-sm" %>
     </div>
   </div>
   <div class="row form-group">
-    <div class="col-3">
-      <%= f.label :"宛名" %>
+    <div class="col-lg-3 col-md-4">
+      <%= f.label "宛名" %>
     </div>
-    <div class="col-3">
+    <div class="col-md-3 col-sm-6">
       <%= f.text_field :name,autofocus: true,placeholder:"名前",class: "form-control form-control-sm" %>
     </div>
-    <div class="col-2 offset-3">
+    <div class="col-2 offset-md-3 offset-sm-2">
       <%= f.submit "変更内容を保存",class: "btn btn-success" %>
     </div>
   </div>
