--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,64 +1,69 @@
 <div class="container">
-  <div class="row my-3">
-    <h4 class="bg-secondary text-white my-3 mx-auto mx-md-5 px-4 rounded">配送先登録 / 一覧</h4>
+  <div class="row my-5">
+    <div class="col-auto align-self-center">
+      <h4 class="bg text-center ml-lg-5 px-5 rounded">
+        配送先登録 / 一覧
+      </h4>
+    </div>
   </div>
   <%= form_with model: @address,url: addresses_path,method: :post do |f| %>
   <div class="row form-group">
-    <div class="col-3">
-      <%= f.label :"郵便番号(ハイフンなし)" %>
+    <div class="col-lg-3 col-md-4">
+      <%= f.label "郵便番号(ハイフンなし)" %>
     </div>
-    <div class="col-3">
+    <div class="col-md-3 col-sm-6">
       <%= f.text_field :postal_code,autofocus: true,placeholder:"郵便番号",class: "form-control form-control-sm" %>
     </div>
   </div>
   <div class="row form-group">
-    <div class="col-3">
-      <%= f.label :"住所" %>
+    <div class="col-lg-3 col-md-4">
+      <%= f.label "住所" %>
     </div>
-    <div class="col-6">
+    <div class="col-md-6">
       <%= f.text_field :address,autofocus: true,placeholder:"住所",class: "form-control form-control-sm" %>
     </div>
   </div>
   <div class="row form-group">
-    <div class="col-3">
-      <%= f.label :"宛名" %>
+    <div class="col-lg-3 col-md-4">
+      <%= f.label "宛名" %>
     </div>
-    <div class="col-3">
+    <div class="col-md-3 col-sm-6">
       <%= f.text_field :name,autofocus: true,placeholder:"名前",class: "form-control form-control-sm" %>
     </div>
-    <div class="col-2 offset-3">
+    <div class="col-2 offset-md-3 offset-sm-2">
       <%= f.submit "新規登録",class: "btn btn-success" %>
     </div>
   </div>
   <% end %>
-  <div class="row no-gutters mt-4">
-    <div class="col-9 mr-auto">
+  <div class="row mt-4 ">
+    <div class="col-lg-9 mr-auto table-responsive">
       <table class="table">
         <thead class="thead-light">
           <tr>
-            <th>郵便番号</th>
-            <th>住所</th>
-            <th>宛名</th>
-            <th></th>
+            <th scope="col" class="border border-dark">郵便番号</th>
+            <th scope="col" class="border border-dark">住所</th>
+            <th scope="col" class="border border-dark">宛名</th>
+            <th scope="col" class="border border-dark"></th>
           </tr>
         </thead>
         <tbody>
           <% @addresses.each do |address| %>
           <tr>
-            <td><%= address.postal_code %></td>
-            <td><%= address.address %></td>
-            <td><%= address.name %></td>
-            <td class="justify-content-around">
-              <span><%= link_to "編集する",edit_address_path(address.id),class: "btn btn-success" %></span>
-              <span>
-                <%= link_to "削除する",edit_address_path(address.id),method: :delete, "data-confirm" =>"本当によろしいですか？",class: "btn btn-danger" %>
-              </span>
-            </td>
+            <td class="border border-dark"><%= address.postal_code %></td>
+            <td class="border border-dark"><%= address.address %></td>
+            <td class="border border-dark"><%= address.name %></td>
+            <td class="border border-dark">
+              <span class="d-flex justify-content-around">
+              <%= link_to "編集する",edit_address_path(address.id),class: "btn btn-success" %>
+              <%= link_to "削除する",edit_address_path(address.id),method: :delete, "data-confirm" =>"本当によろしいですか？",class: "btn btn-danger" %>
+            </span></td>
           </tr>
           <% end %>
         </tbody>
       </table>
-      <%= paginate @addresses %>
     </div>
+  </div>
+  <div class="row justify-content-center">
+    <%= paginate @addresses %>
   </div>
 </div>
