--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,13 +1,15 @@
 <div class="container">
-  <div class="row py-3">
-    <div class="col-4">
-      <h4 class="bg-secondary text-white text-center m-3 px-3 rounded">ショッピングカート</h4>
-    </div>
-    <div class="col-4 offset-3">
-      <%= link_to "カートを空にする", all_destroy_cart_items_path, method: :delete, "data-confirm" =>"本当にカート内のアイテム全てを消してよろしいですか?",class: "btn btn-danger px-2" %>
+  <div class="row my-5">
+    <div class="col-auto align-self-center">
+      <h4 class="bg text-center ml-lg-5 px-5 rounded">
+        ショッピングカート
+      </h4>
     </div>
   </div>
   <div class="row">
+    <div class="ml-auto mb-2">
+      <%= link_to "カートを空にする", all_destroy_cart_items_path, method: :delete, "data-confirm" =>"本当にカート内のアイテム全てを消してよろしいですか?",class: "btn btn-danger mr-lg-5 px-5" %>
+    </div>
     <table class="table">
       <thead>
         <th>商品名</th>
@@ -19,37 +21,39 @@
       <tbody>
         <% @cart_items.each do |cart_item| %>
           <tr>
-            <td><%= cart_item_item.get_image(100,100) %><%= cart_item.item.name %></td>
+            <td><%= image_tag cart_item.item.get_image(50,50),class: "rounded-circle mx-2" %><%= cart_item.item.name %></td>
             <td><%= cart_item.item.with_tax_price %></td>
             <td>
-              <%= form_with model: cart_item,url: cart_item_path,method: patch do |f| %>
+              <%= form_with model: cart_item,url: cart_item_path(cart_item.id),method: :patch do |f| %>
                 <%= f.select :amount, *[1..10] ,class: "form-control" %>
-                <%= f.submit "変更",class: "btn btn-success" %>
+                <%= f.submit "変更",class: "btn btn-sm btn-success" %>
               <% end %>
             </td>
-            <td><%= cart_item.sub_total %></td>
-            <td><%= link_to "削除する", cart_item_path(cart_item.id), method: :delete, "data-confirm" =>"本当によろしいですか?",class: "btn btn-danger px-2" %></td>
+            <td><%= number_to_currency(cart_item.sub_total) %></td>
+            <td><%= link_to "削除する", cart_item_path(cart_item.id), method: :delete, "data-confirm" =>"本当によろしいですか?",class: "btn btn-sm btn-danger px-2" %></td>
           </tr>
         <% end %>
       </tbody>
     </table>
   </div>
-  <div class="row py-3">
-    <div class="col-4">
-      <%= link_to "買い物を続ける", root_path,class: "btn btn-primary px-2" %>
-    </div>
-    <div class="col-4 offset-3">
+  <div class="row justify-content-center py-3">
+    <div class="col-md-6 order-md-2 align-self-center">
       <table class="table">
         <tbody>
           <th>
-            <td class="bg-secondary">合計金額</td>
-            <td><% @total %></td>
+            <th class="bd">合計金額</th>
+            <td><%= number_to_currency(@total) %></td>
           </th>
         </tbody>
       </table>
     </div>
-  </div>
-  <div class="row justify-content-center py-3">
-    <%= link_to "情報入力に進む",new_order_path,class: "btn btn-lg btn-success px-3" %>
+    <div class="col-md-6 order-md-1 align-self-center text-center">
+      <%= link_to "買い物を続ける", root_path,class: "btn btn-primary px-2 mx-2" %>
+    </div>
+    <div class="col-md-12 order-md-3 align-self-center text-center">
+      <% if @cart_items.present? %>
+        <%= link_to "情報入力に進む",new_order_path,class: "btn btn-lg btn-success px-2 m-4" %>
+      <% end %>
+    </div>
   </div>
 </div>
